Fix responsive on tablets.

--- a/components/Layout/Header.css
+++ b/components/Layout/Header.css
@@ -1,9 +1,9 @@
 @import "../../utils/variables.css";
 
 .header{
-  flex-basis: 100%;
+  /*flex-basis: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: row;*/
   z-index: 99;
   background-color: rgb(205,220,57);
   color: #444;
@@ -12,14 +12,19 @@
   left: 0;
   right: 0;
   position: fixed;
+  bottom:0;
   width: 100vw;
   &:before{
     content: "";
     position: fixed;
     height: 4rem;
     bottom: $header-height;
+
     left: 0; right: 0;
     background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1));
+  }
+  @media(max-width: $screen-md){
+    display: block;
   }
 }
 .container{
